# MicroRenderer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.cpp
assets/scene1/: scene1.mtl
assets/scene2/: yingsheng.mtl
examples/01_Triangle/: CMakeLists.txt  main.cpp
examples/02_mvpTriangle/: CMakeLists.txt  main.cpp
examples/03_mary/: CMakeLists.txt  main.cpp
include/: Camera.h  CommonUtils.h  Light.h  LogUtils.h  MathUtils.h  Renderer.h  Shader.h  ShadingPipeline.h  Structure.h  WindowApp.h
src/: Camera.cpp  CommonUtils.cpp  Light.cpp  LogUtils.cpp  MathUtils.cpp  Renderer.cpp  Shader.cpp  ShadingPipeline.cpp  Structure.cpp  WindowApp.cpp
